--- a/mobilev2/app/pages/home/home.html
+++ b/mobilev2/app/pages/home/home.html
@@ -15,6 +15,14 @@
     <ion-item *ngFor="#content of contents" class="content" text-wrap>
         <img src="{{content.photo}}">
         {{content.title}}
+
+        <select>
+            <option selected>Default</option>
+            <option >Green</option>
+            <option>Red</option>
+        </select>
+
+        <button type="button" class="button button-small button-clear" (click)="saveToCart(content.id)">Add to Cart</button>
     </ion-item>
 </ion-content>
 <button fab fab-bottom fab-right (click)="cart()" calm>
