Updated backend files and app files

--- a/mobilev2/app/pages/addresses/addresses.html
+++ b/mobilev2/app/pages/addresses/addresses.html
@@ -19,8 +19,8 @@
         <p>{{address.strName}}</p>
         <p>{{address.strAddressLine1}}</p>
         <p>{{address.strAddressLine2}}</p>
-        <p>{{address.idArea}}, {{address.strCity}}</p>
-        <p>{{address.strState}} - {{address.intPinCode}}</p>
+        <p>{{address.strArea}}, {{address.strCity}}</p>
+        <p>{{address.strState}} - {{address.intPincode}}</p>
     </ion-card>
   <div *ngIf="!itemAvailable">No delivery address added by you yet.</div>
 </ion-content>
