--- a/mobilev2/app/pages/addresses/addresses.html
+++ b/mobilev2/app/pages/addresses/addresses.html
@@ -4,7 +4,7 @@
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-navbar favorite *navbar>
+<ion-navbar *navbar>
   <ion-title>View Delivery Addresses</ion-title>
 </ion-navbar>
 
