--- a/mobilev2/app/pages/products/products.html
+++ b/mobilev2/app/pages/products/products.html
@@ -4,11 +4,11 @@
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-navbar favorite *navbar>
+<ion-navbar *navbar>
     <button menuToggle="left">
         <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>MVF</ion-title>
+    <ion-title>{{category.name}}</ion-title>
     <ion-buttons end>
         <a class="button button-clear button-small" (click)="gotoSearch()">
             <ion-icon name="search"></ion-icon>
