--- a/mobilev2/app/pages/home/home.html
+++ b/mobilev2/app/pages/home/home.html
@@ -25,8 +25,8 @@
 
         <img src="{{category.photo}}" width="100%">
         
-        <ion-item padding *ngFor="#subcategory of category.sub_categories" class="subitem" (click)="categoryTapped($event, subcategory)">
-            {{subcategory.name}}
+        <ion-item padding *ngFor="#subcategory of category.sub_categories" (click)="categoryTapped($event, subcategory)">
+            {{subcategory.name}} <ion-icon name="arrow-forward" item-right></ion-icon>
         </ion-item>
         
     </ion-card>
